<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context="edu.pcc.caloriecalculator.MainActivity"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <!--Weight-->

        <TextView
            android:id="@+id/weightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_label"
            android:textStyle="bold"
            android:layout_margin="@dimen/left_column_widgets"
            android:textSize="@dimen/large_text_size" />

        <EditText
            android:id="@+id/weightAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"
            android:hint="@string/weight_amount"
            android:textSize="@dimen/large_text_size" />

        <!--MET Value-->

        <TextView
            android:id="@+id/metValueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/met_value_label"
            android:textStyle="bold"
            android:layout_margin="@dimen/left_column_widgets"
            android:textSize="@dimen/large_text_size" />

        <EditText
            android:id="@+id/metValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"
            android:hint="@string/met_value"
            android:textSize="@dimen/large_text_size" />

        <!--Calculate Button-->

        <Button
            android:onClick="calculate"
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_button"
            android:textStyle="bold"
            android:layout_margin="@dimen/left_column_widgets"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metDescription"
            android:autoLink="web"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>